fixed dark mode bug

--- a/apps/portfolio/app/assets/css/dark.css
+++ b/apps/portfolio/app/assets/css/dark.css
@@ -1,3 +1,7 @@
 body.dark {
 	@apply bg-dark-bg;
 }
+
+.dark .title-shadow{
+    text-shadow: 2px 2px #FFF, -2px 2px #FFF, 2px -2px #FFF, -2px -2px #FFF, 5px 5px 0px rgba(255, 255, 255, 0.1);
+}
